--- a/ExpenseManager/templates/base.html
+++ b/ExpenseManager/templates/base.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.js"></script>
     <meta charset="utf-8">
     <title>{% block title %}App{% endblock %}</title>
   </head>
@@ -13,6 +16,7 @@
       <input type=button value="BACK" onClick="javascript:history.go(-1);">
       <input type=button value="HOME" onClick="/">
         <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'expense_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">NEW</span></a>
       {% else %}
         <a href="{% url 'login' %}">login</a> / <a href="{% url 'signup' %}">signup</a>
       {% endif %}
